[project]
name = "planetary-api"
version = "0.1.0"
description = "Companion code for Building RESTful APIs with Flask."
authors = [
    { name = "Og B. Maciel", email = "omaciel@ogmaciel.com" }
]
dependencies = [
    "Flask_SQLAlchemy>=3.1.1",
    "flask-marshmallow>=1.2.0",
    "flask-dotenv>=0.1.2",
    "python-dotenv>=1.0.1",
    "marshmallow-sqlalchemy>=1.0.0",
    "flask-jwt-extended>=4.6.0",
    "Flask-Mail>=0.9.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/planetary_api"]
